🦄 refactor: refactor article version
